<resources>
    <string name="app_name">Lets Chat</string>
    <string name="password">Password</string>
    <string name="click_for_sign_up">Click for Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="let_s_chat">Let\'s Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="madhu">Madhu</string>
    <string name="last_message">Last Message</string>
</resources>